objects/mcsocsel10__RecordTopicProfileAssociation__c.object
<CustomObject>
    <fields>
        <fullName>mcsocsel10__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__RecordID__c</fullName>
        <label>Record ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__TopicProfileID__c</fullName>
        <label>Topic Profile ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Record-Topic Profile Association</label>
    <nameField>
        <label>Record-Topic Profile Association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Record-Topic Profile Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>